add hours and other single brewery functionality

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "2.2.1",
     "@ionic/storage": "1.1.6",
     "angular2-jwt": "^0.1.27",
+    "dateformat": "^2.0.0",
     "geodist": "^0.2.1",
     "ionic-angular": "2.0.0-rc.4",
     "ionic-native": "2.2.11",
