add unit test config, add unit tests for breweries provider

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
     "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
+    "ionic:serve": "ionic-app-scripts serve",
+    "test": "ng test"
   },
   "dependencies": {
     "@angular/common": "2.2.1",
@@ -32,6 +33,21 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "0.0.48",
+    "@types/jasmine": "^2.5.41",
+    "@types/node": "^7.0.4",
+    "angular-cli": "^1.0.0-beta.26",
+    "codecov": "^1.0.1",
+    "jasmine-core": "^2.5.2",
+    "jasmine-promises": "^0.4.1",
+    "jasmine-spec-reporter": "^3.2.0",
+    "karma": "^1.4.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-mocha-reporter": "^2.2.2",
+    "karma-remap-istanbul": "^0.4.0",
+    "ts-node": "^2.0.0",
+    "tslint": "^4.4.2",
+    "tslint-eslint-rules": "^3.2.3",
     "typescript": "2.0.9"
   },
   "cordovaPlugins": [
